# rss_ringoccs

./: .cmake-format.yaml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AAREADME.txt  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  ReleaseNotes.md  conanfile.txt  config_modules.sh  config_rss_ringoccs.sh  config_src.sh  dev-requirements.txt  github_readme.md  make.sh  pyproject.toml  remove_binaries.sh  requirements.txt  rss_ringoccs_config.sh  rss_ringoccs_global_paths.py  rssconfig.sh  setup.py  tox.ini  vcpkg.json
docs/: conf.py  (+52 more)
src/: AAREADME_src.txt  CMakeLists.txt  calc_f_sky_recon.py  calc_freq_offset.py  calc_geometry.py  calc_geometry_v2.py  calc_occ_geometry.py  calibration_class.py  cassini_blocked.py  diffraction_correction.py  et_to_spm.py  freq_offset.py  freq_offset_fit.py  make_cal_file.py  make_dlp_file.py  norm_diff_class.py  plot_geo.py  power_fit_gui.py  power_normalization.py  resample_IQ.py  rjm_diff_corr_v1.py  rsr_reader.py  spm_to_et.py
src/csv_tools/: CMakeLists.txt  rss_ringoccs_cal_csv_check_column_count.c  rss_ringoccs_cal_csv_destroy.c  rss_ringoccs_cal_csv_destroy_members.c  rss_ringoccs_cal_csv_extract.c  rss_ringoccs_cal_csv_init.c  rss_ringoccs_cal_csv_malloc.c  rss_ringoccs_cal_csv_read_data.c  rss_ringoccs_csv_data_check_chord_occ.c  rss_ringoccs_csv_data_destroy.c  rss_ringoccs_csv_data_destroy_members.c  rss_ringoccs_csv_data_extract.c  rss_ringoccs_csv_data_extract_cal.c  rss_ringoccs_csv_data_extract_dlp.c  rss_ringoccs_csv_data_extract_geo.c  rss_ringoccs_csv_data_extract_tau.c  rss_ringoccs_csv_data_init.c  rss_ringoccs_csv_data_interpolate_cal.c  rss_ringoccs_csv_data_interpolate_geo.c  rss_ringoccs_csv_data_interpolate_tau.c  rss_ringoccs_csv_data_malloc.c  rss_ringoccs_csv_data_reverse_geo_variables.c  rss_ringoccs_csv_data_steal_dlp_data.c  rss_ringoccs_destroy_cal_csv.c  rss_ringoccs_destroy_cal_csv_members.c  rss_ringoccs_destroy_csv.c  rss_ringoccs_destroy_csv_members.c  rss_ringoccs_destroy_dlp_csv.c  rss_ringoccs_destroy_dlp_csv_members.c  rss_ringoccs_destroy_geo_csv.c  rss_ringoccs_destroy_geo_csv_members.c  rss_ringoccs_destroy_tau_csv.c  rss_ringoccs_destroy_tau_csv_members.c  rss_ringoccs_dlp_csv_check_column_count.c  rss_ringoccs_dlp_csv_destroy.c  rss_ringoccs_dlp_csv_destroy_members.c  rss_ringoccs_dlp_csv_extract.c  rss_ringoccs_dlp_csv_init.c  rss_ringoccs_dlp_csv_malloc.c  rss_ringoccs_dlp_csv_read_data.c  (+47 more)
src/diffraction/: rss_ringoccs_gap_fresnel_diffraction.c  rss_ringoccs_square_wave_fresnel_diffraction.c
src/fresnel_kernel/: rss_ringoccs_fresnel_d2psi_dphi2.c  rss_ringoccs_fresnel_dpsi_dphi.c  rss_ringoccs_fresnel_dpsi_dphi_D.c  rss_ringoccs_fresnel_dpsi_dphi_elliptic.c  rss_ringoccs_fresnel_psi.c  rss_ringoccs_fresnel_psi_newton.c  rss_ringoccs_fresnel_psi_newton_D.c  rss_ringoccs_fresnel_psi_newton_D_old.c  rss_ringoccs_fresnel_psi_newton_dD_dphi.c  rss_ringoccs_fresnel_psi_newton_elliptic.c  rss_ringoccs_fresnel_psi_old.c  rss_ringoccs_fresnel_scale.c
src/fresnel_transform/: CMakeLists.txt  rss_ringoccs_fast_fresnel_phase_and_weight.c  rss_ringoccs_fresnel_kernel.c  rss_ringoccs_fresnel_phase_and_weight.c  rss_ringoccs_fresnel_transform.c  rss_ringoccs_fresnel_transform_cubic_interpolation.c  rss_ringoccs_fresnel_transform_cubic_interpolation_norm.c  rss_ringoccs_fresnel_transform_ellipse.c  rss_ringoccs_fresnel_transform_ellipse_norm.c  rss_ringoccs_fresnel_transform_elliptical_newton.c  rss_ringoccs_fresnel_transform_even_polynomial.c  rss_ringoccs_fresnel_transform_legendre_even.c  rss_ringoccs_fresnel_transform_legendre_even_norm.c  rss_ringoccs_fresnel_transform_legendre_odd.c  rss_ringoccs_fresnel_transform_legendre_odd_norm.c  rss_ringoccs_fresnel_transform_newton.c  rss_ringoccs_fresnel_transform_newton16.c  rss_ringoccs_fresnel_transform_newton4.c  rss_ringoccs_fresnel_transform_newton8.c  rss_ringoccs_fresnel_transform_newton_D.c  rss_ringoccs_fresnel_transform_newton_D_norm.c  rss_ringoccs_fresnel_transform_newton_D_old.c  rss_ringoccs_fresnel_transform_newton_D_old_norm.c  rss_ringoccs_fresnel_transform_newton_d.c  rss_ringoccs_fresnel_transform_newton_dD_dphi.c  rss_ringoccs_fresnel_transform_newton_dD_dphi_norm.c  rss_ringoccs_fresnel_transform_newton_d_dphi.c  rss_ringoccs_fresnel_transform_newton_d_dphi_norm.c  rss_ringoccs_fresnel_transform_newton_d_norm.c  rss_ringoccs_fresnel_transform_newton_d_old.c  rss_ringoccs_fresnel_transform_newton_d_old_norm.c  rss_ringoccs_fresnel_transform_newton_d_quartic.c  rss_ringoccs_fresnel_transform_newton_d_quartic_norm.c  rss_ringoccs_fresnel_transform_newton_filon01.c  rss_ringoccs_fresnel_transform_newton_filon02.c  rss_ringoccs_fresnel_transform_newton_filon11.c  rss_ringoccs_fresnel_transform_newton_filon12.c  rss_ringoccs_fresnel_transform_newton_linear_filon.c  rss_ringoccs_fresnel_transform_newton_norm.c  rss_ringoccs_fresnel_transform_newton_quadratic.c  (+28 more)
src/history/: CMakeLists.txt  rss_ringoccs_date_to_rev.c  rss_ringoccs_get_version.c  rss_ringoccs_history_create_base.c  rss_ringoccs_history_print.c
src/model/: rss_ringoccs_tau_model_left_straightedge.c  rss_ringoccs_tau_model_right_straightedge.c  rss_ringoccs_tau_model_sine_wave.c
src/occultation_geometry/: CMakeLists.txt  rss_ringoccs_effective_ring_opening_angle.txt  rss_ringoccs_elevation_angle_deg.c  rss_ringoccs_light_distance.c  rss_ringoccs_opening_angle.c  rss_ringoccs_opening_angle_deg.c  rss_ringoccs_optical_depth_enhancement.c  rssringoccs_calc_B_deg.c
src/reconstruction/: CMakeLists.txt  rss_ringoccs_copy_dlp_data_to_tau.c  rss_ringoccs_create_tau_obj.c  rss_ringoccs_diffraction_correction.c  rss_ringoccs_diffraction_correction_fresnel.c  rss_ringoccs_diffraction_correction_legendre.c  rss_ringoccs_diffraction_correction_newton.c  rss_ringoccs_diffraction_correction_polynomial_newton.c  rss_ringoccs_diffraction_correction_simple_fft.c  rss_ringoccs_reconstruction.c  rss_ringoccs_tau_check_data.c  rss_ringoccs_tau_check_data_range.c  rss_ringoccs_tau_check_keywords.c  rss_ringoccs_tau_check_occ_type.c  rss_ringoccs_tau_compute_vars.c  (+5 more)
(+1450 files in other folders)
